deploy/overlays/staging/backend-staging-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: naytife
spec:
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "800m"
